--- a/src/assets/css/profile.css
+++ b/src/assets/css/profile.css
@@ -55,3 +55,6 @@
   margin-top: 5em;
 }
 
+.container-test {
+  padding: 5%;
+}
